--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -74,7 +74,7 @@ services:
       /bin/sh -c "
         trap exit TERM;
         while :; do
-          certbot renew --webroot -w /etc/nginx/conf.d;
+          certbot renew --webroot -w /etc/nginx/www;
           sleep 12h & wait $${!};
         done
       "
