--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -71,14 +71,16 @@ services:
       - ./config/certs:/etc/letsencrypt
       - ./config/nginx/conf.d:/etc/nginx/conf.d
       - ./config/nginx/www:/etc/nginx/www
-    entrypoint: >
-      /bin/sh -c "
-        trap exit TERM;
-        while :; do
-          certbot renew --webroot -w /etc/nginx/www;
-          sleep 12h & wait $${!};
-        done
-      "
+    entrypoint:
+    - /bin/sh
+    - -c
+    - |
+      trap exit TERM
+      while :; do
+        certbot renew --webroot -w /etc/nginx/www
+        sleep 12h & wait $${!}
+      done
+
     depends_on:
       - nginx
 
